--- a/pinyougou-parent/pinyougou-manager-web/pom.xml
+++ b/pinyougou-parent/pinyougou-manager-web/pom.xml
@@ -80,9 +80,14 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+        </dependency>-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.28</version>
         </dependency>
         <dependency>
             <groupId>javassist</groupId>
