--- a/pinyougou-parent/pinyougou-sellergoods-service/pom.xml
+++ b/pinyougou-parent/pinyougou-sellergoods-service/pom.xml
@@ -86,9 +86,13 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+        </dependency>-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
         </dependency>
         <dependency>
             <groupId>javassist</groupId>
