--- a/pinyougou-parent/pom.xml
+++ b/pinyougou-parent/pom.xml
@@ -113,6 +113,11 @@
                 <artifactId>jackson-databind</artifactId>
                 <version>${jackson.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.28</version>
+            </dependency>
             <!--动态类库-->
             <dependency>
                 <groupId>javassist</groupId>
